# test-7

./: .gitignore  CLAUDE.md  Cargo.toml  README.en.md  README.ko.md  README.md  requirements.txt
configs/: edge_types.yaml
crates/tecs-core/: Cargo.toml
crates/tecs-core/src/: lib.rs
crates/tecs-core/src/hyperbolic/: hyperbolicity.rs  mod.rs  sarkar.rs
crates/tecs-core/src/kg/: graph.rs  ingest.rs  mod.rs  types.rs
crates/tecs-core/src/pruner/: cache.rs  distance.rs  mod.rs  neighborhood.rs
crates/tecs-core/src/topology/: betti.rs  emergence.rs  mod.rs  persistence.rs  vr_complex.rs
data/: expD_novel_ideas.json  expD_report.html  phase5_eval_results.json  phase6_emergence_repeated.json  phase6_emergence_results.json  phase6_lambda01.json  phase6_lambda05.json  phase6_lambda10.json  phase6_lowlr.json  phase6_results.json  phase6_smalllora.json  three_way_boundary_test.json  three_way_comparison.json
experiments/: common.py  connectome_layout.py  connectome_multilayer.py  e1_2way_embedding.py  e2_quality_sweep.py  e5_layer_wall_distribution.py  e6_forward_hook.py  e7_lora_finetune.py  e7_lora_finetune_gpu.py  e8_novelty_test.py  expA_ricci_flow.py  expB_hyperbolic_ph.py  expC_hyperbolic_ricci.py  expD_novel_idea_test.py  math_verification.py  math_verification_real_model.py  math_verification_t4_t5.py  math_verification_t5_fairness.py  neuron_layout.py  phase2_hole_directions.py  phase3_topological_adapter.py  phase3b_nonuniform_adapter.py  phase4_emergence_optimization.py  phase5_generation_eval.py  phase6_emergence_test.py  phase6_selective_finetune.py  poc_quick_test.py  (+6 more)
(+16 files in other folders)
