[workspace]
resolver = "2"
members = [
    "crates/tecs-core",
]
exclude = [
    "crates/tecs-python",  # cdylib → maturin develop로 별도 빌드
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Hyperbolic geometry
hyperball = "0.1"

# Graph
petgraph = { version = "0.6", features = ["serde-1"] }

# Linear algebra
ndarray = { version = "0.16", features = ["rayon"] }
nalgebra = "0.33"

# Manifold trait (re-exported by hyperball's dep)
skel = "0.1"

# Persistent homology
lophat = { version = "0.10", default-features = false, features = ["serde"] }
ripser = "0.1"

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
dashmap = "6"
parking_lot = "0.12"
