[package]
name = "tecs-core"
version.workspace = true
edition.workspace = true

[dependencies]
hyperball.workspace = true
skel.workspace = true
petgraph.workspace = true
ndarray.workspace = true
nalgebra.workspace = true
lophat.workspace = true
ripser.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
dashmap.workspace = true
parking_lot.workspace = true

num-traits = "0.2"

[dev-dependencies]
tempfile = "3"
